# voxelizer

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
helpers/: FindUtils.cmake  Helpers.cmake  directory.cpp  directory.h  main.h  main_win.cpp  main_x11.cpp  nv_gui.cpp  nv_gui.h  string_helper.cpp  string_helper.h  vec.cpp  vec.h
libmin/: CMakeLists.txt
libmin/cmake/: FindLibmin.cmake  HelpersBootstrap.cmake
libmin/include/: camera3d.h  common_cuda.h  common_defs.h  dataptr.h  datax.h  directory.h  event.h  event_system.h  file_png.h  image.h  image_info.h  imageformat.h  imageformat_bmp.h  imageformat_generic.h  imageformat_jpg.h  imageformat_png.h  imageformat_tga.h  imageformat_tiff.h  main_includes.h  nv_gui.h  quaternion.h  timex.h  vec.h  widget.h
libmin/mains/: main_win.cpp
libmin/src/: camera3d.cpp  common_cuda.cpp  common_defs.cpp  dataptr.cpp  datax.cpp  directory.cpp  event.cpp  event_system.cpp  image.cpp  image_bgr24.cpp  image_bw16.cpp  image_bw32.cpp  image_bw8.cpp  image_f8.cpp  image_info.cpp  image_rgb24.cpp  image_rgba32.cpp  imageformat_bmp.cpp  imageformat_generic.cpp  imageformat_jpg.cpp  imageformat_png.cpp  imageformat_tga.cpp  imageformat_tiff.cpp  nv_gui.cpp  quaternion.cpp  timex.cpp  vec.cpp  widget.cpp
math_voxelizer/: CMakeLists.txt
